# serializer version: 1
# name: test_create_sensors[mock_heat_meter_response0]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'volume',
        'friendly_name': 'Heat Meter Volume usage',
        'icon': 'mdi:fire',
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_volume_usage',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '456.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Heat Meter Heat usage GJ',
        'icon': 'mdi:fire',
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': <UnitOfEnergy.GIGA_JOULE: 'GJ'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_heat_usage_gj',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '123.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Heat Meter Heat previous year GJ',
        'icon': 'mdi:fire',
        'unit_of_measurement': <UnitOfEnergy.GIGA_JOULE: 'GJ'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_heat_previous_year_gj',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '111.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'volume',
        'friendly_name': 'Heat Meter Volume usage previous year',
        'icon': 'mdi:fire',
        'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_volume_usage_previous_year',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '450.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Ownership number',
        'icon': 'mdi:identifier',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_ownership_number',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '123a',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Error number',
        'icon': 'mdi:home-alert',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_error_number',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Device number',
        'icon': 'mdi:identifier',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_device_number',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': 'abc1',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Heat Meter Measurement period minutes',
        'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_measurement_period_minutes',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '60',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Heat Meter Power max',
        'unit_of_measurement': <UnitOfPower.KILO_WATT: 'kW'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_power_max',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '22.1',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Heat Meter Power max previous year',
        'unit_of_measurement': <UnitOfPower.KILO_WATT: 'kW'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_power_max_previous_year',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '22.4',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Flowrate max',
        'icon': 'mdi:water-outline',
        'unit_of_measurement': <UnitOfVolumeFlowRate.CUBIC_METERS_PER_HOUR: 'm³/h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_flowrate_max',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '0.744',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Flowrate max previous year',
        'icon': 'mdi:water-outline',
        'unit_of_measurement': <UnitOfVolumeFlowRate.CUBIC_METERS_PER_HOUR: 'm³/h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_flowrate_max_previous_year',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '0.743',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'temperature',
        'friendly_name': 'Heat Meter Return temperature max',
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_return_temperature_max',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '96.1',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'temperature',
        'friendly_name': 'Heat Meter Return temperature max previous year',
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_return_temperature_max_previous_year',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '96.2',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'temperature',
        'friendly_name': 'Heat Meter Flow temperature max',
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_flow_temperature_max',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '98.5',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'temperature',
        'friendly_name': 'Heat Meter Flow temperature max previous year',
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_flow_temperature_max_previous_year',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '98.4',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Heat Meter Operating hours',
        'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_operating_hours',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '115575',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Heat Meter Flow hours',
        'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_flow_hours',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '30242',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Heat Meter Fault hours',
        'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_fault_hours',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '5',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Heat Meter Fault hours previous year',
        'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_fault_hours_previous_year',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '5',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Yearly set day',
        'icon': 'mdi:clock-outline',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_yearly_set_day',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '01-01',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Monthly set day',
        'icon': 'mdi:clock-outline',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_monthly_set_day',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '01',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'timestamp',
        'friendly_name': 'Heat Meter Meter date time',
        'icon': 'mdi:clock-outline',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_meter_date_time',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '2022-05-19T19:41:17+00:00',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Measuring range',
        'icon': 'mdi:water-outline',
        'unit_of_measurement': <UnitOfVolumeFlowRate.CUBIC_METERS_PER_HOUR: 'm³/h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_measuring_range',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '1.5',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Settings and firmware',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_settings_and_firmware',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '0 1 0 0000 CECV CECV 1 5.16 5.16 F 101008 040404 08 0',
    }),
  ])
# ---
# name: test_create_sensors[mock_heat_meter_response1]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Heat Meter Heat usage MWh',
        'icon': 'mdi:fire',
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': <UnitOfEnergy.MEGA_WATT_HOUR: 'MWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_heat_usage_mwh',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '123.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'volume',
        'friendly_name': 'Heat Meter Volume usage',
        'icon': 'mdi:fire',
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_volume_usage',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '456.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Heat Meter Heat previous year MWh',
        'icon': 'mdi:fire',
        'unit_of_measurement': <UnitOfEnergy.MEGA_WATT_HOUR: 'MWh'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_heat_previous_year_mwh',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '111.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'volume',
        'friendly_name': 'Heat Meter Volume usage previous year',
        'icon': 'mdi:fire',
        'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_volume_usage_previous_year',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '450.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Ownership number',
        'icon': 'mdi:identifier',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_ownership_number',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '123a',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Error number',
        'icon': 'mdi:home-alert',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_error_number',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Device number',
        'icon': 'mdi:identifier',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_device_number',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': 'abc1',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Heat Meter Measurement period minutes',
        'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_measurement_period_minutes',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '60',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Heat Meter Power max',
        'unit_of_measurement': <UnitOfPower.KILO_WATT: 'kW'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_power_max',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '22.1',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Heat Meter Power max previous year',
        'unit_of_measurement': <UnitOfPower.KILO_WATT: 'kW'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_power_max_previous_year',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '22.4',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Flowrate max',
        'icon': 'mdi:water-outline',
        'unit_of_measurement': <UnitOfVolumeFlowRate.CUBIC_METERS_PER_HOUR: 'm³/h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_flowrate_max',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '0.744',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Flowrate max previous year',
        'icon': 'mdi:water-outline',
        'unit_of_measurement': <UnitOfVolumeFlowRate.CUBIC_METERS_PER_HOUR: 'm³/h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_flowrate_max_previous_year',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '0.743',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'temperature',
        'friendly_name': 'Heat Meter Return temperature max',
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_return_temperature_max',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '96.1',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'temperature',
        'friendly_name': 'Heat Meter Return temperature max previous year',
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_return_temperature_max_previous_year',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '96.2',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'temperature',
        'friendly_name': 'Heat Meter Flow temperature max',
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_flow_temperature_max',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '98.5',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'temperature',
        'friendly_name': 'Heat Meter Flow temperature max previous year',
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_flow_temperature_max_previous_year',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '98.4',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Heat Meter Operating hours',
        'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_operating_hours',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '115575',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Heat Meter Flow hours',
        'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_flow_hours',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '30242',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Heat Meter Fault hours',
        'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_fault_hours',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '5',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Heat Meter Fault hours previous year',
        'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_fault_hours_previous_year',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '5',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Yearly set day',
        'icon': 'mdi:clock-outline',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_yearly_set_day',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '01-01',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Monthly set day',
        'icon': 'mdi:clock-outline',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_monthly_set_day',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '01',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'timestamp',
        'friendly_name': 'Heat Meter Meter date time',
        'icon': 'mdi:clock-outline',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_meter_date_time',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '2022-05-19T19:41:17+00:00',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Measuring range',
        'icon': 'mdi:water-outline',
        'unit_of_measurement': <UnitOfVolumeFlowRate.CUBIC_METERS_PER_HOUR: 'm³/h'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_measuring_range',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '1.5',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Heat Meter Settings and firmware',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.heat_meter_settings_and_firmware',
      'last_changed': <ANY>,
      'last_updated': <ANY>,
      'state': '0 1 0 0000 CECV CECV 1 5.16 5.16 F 101008 040404 08 0',
    }),
  ])
# ---
